--- a/minecraft-world-shifter/pom.xml
+++ b/minecraft-world-shifter/pom.xml
@@ -1,28 +1,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.lioncat6</groupId>
-	<artifactId>minecraft-world-shifter</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>ShiftWorld</name>
-	<contributors>
-		<contributor>
-			<name>Lioncat6</name>
-			<url>https://github.com/Lioncat6</url>
-		</contributor>
-	</contributors>
-	<repositories>
-		<repository>
-			<id>jitpack.io</id>
-			<url>https://jitpack.io</url>
-		</repository>
-	</repositories>
-	<dependencies>
-		<dependency>
-			<groupId>com.github.piegamesde</groupId>
-			<artifactId>nbt</artifactId>
-			<version>3.0.1</version>
-		</dependency>
-	</dependencies>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.lioncat6</groupId>
+    <artifactId>minecraft-world-shifter</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>ShiftWorld</name>
+    <contributors>
+        <contributor>
+            <name>Lioncat6</name>
+            <url>https://github.com/Lioncat6</url>
+        </contributor>
+        <contributor>
+            <name>Darkutom</name>
+            <url>https://github.com/darkutomofficial</url>
+        </contributor>
+    </contributors>
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+    <dependencies>
+        <dependency>
+            <groupId>com.github.piegamesde</groupId>
+            <artifactId>nbt</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+    </dependencies>
 </project>
